Fix table overflow on mobile devices

--- a/src/styles/guide.scss
+++ b/src/styles/guide.scss
@@ -1,4 +1,6 @@
 .guide {
+  overflow-x: scroll;
+  
   figure.gatsby-resp-image-figure, span.gatsby-resp-image-wrapper {
     margin-top: 1em;
     margin-bottom: 1em;
@@ -20,6 +22,8 @@
     th, td {
       border: 1px solid;
       padding: 0.5em 0.5em;
+      word-wrap: break-word;
+      word-break: break-all;
     }
   }
 }
